<resources>
    <string name="app_name">SpartanSurveys</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password must be >4 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">Sign&#160;In</string>
    <string name="sign_up">Sign&#160;Up</string>
    <string name="welcome_message">Welcome&#160;to&#160;\nSpartan&#160;Surveys</string>
    <!--menu strings-->
    <string name="logout">logout</string>
    <string name="settings">settings</string>
    <string name="survey_title_hint">survey&#160;title</string>
    <string name="survey_title_label">Survey&#160;Title</string>
    <string name="survey_taken_label">Taken?</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="write_a_question">write&#160;a&#160;question</string>
    <string name="question_1">Question&#160;1</string>
    <string name="question_2">Question&#160;2</string>
    <string name="question_3">Question&#160;3</string>
    <string name="question_4">Question&#160;4</string>
    <string name="question_5">Question&#160;5</string>
    <string name="create_survey">Create Survey</string>
    <string name="privateSurvey">Private</string>
    <string name="publicSurvey">Public</string>
    <string name="survey_name">Survey Name</string>
    <string name="enter_name">enter name</string>
    <string name="type_access_code">type access code</string>
    <string name="search_for_a_survey">Search for a survey</string>
    <string name="search">Search</string>
    <string name="description">Description</string>
    <string name="enter_survey_description">enter survey description</string>
</resources>
