<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sjsu.se137.team3.spartansurveys.SearchFragment"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_for_a_survey"
        android:textSize="25sp"
        android:textColor="@color/spartan_shadow" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:id="@+id/survey_search_bar"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pub_or_priv"
        android:layout_gravity="center">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privateSurvey"
            android:id="@+id/search_private_radio_button"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/search_public_radio_button"
            android:text="@string/publicSurvey" />
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_access_code"
        android:hint="@string/type_access_code"
        android:maxLines="1"
        android:visibility="gone" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:id="@+id/search_surveys_button"
        android:text="search"
        android:textColor="@color/spartan_yellow" />


</LinearLayout>
